hphp/hack/test/typecheck/constraints/contravariance_constraint_bad_2.php.exp
File "contravariance_constraint_bad_2.php", line 43, characters 12-13:
Invalid return type (Typing[4110])
  File "contravariance_constraint_bad_2.php", line 39, characters 16-18:
  This is an object of type NAC\AAA
  File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
  It is incompatible with a value of generic type T
  File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
  Considering that this type argument is contravariant with respect to NAC\CONTRA
